--- a/src/locales/da.json
+++ b/src/locales/da.json
@@ -196,6 +196,7 @@
     "about.page.breadcrumb.teacher":"تیم ما",
     "teacher.page.title":"تیم ما",
     "teacher.page.subtitle":"با معلمان و کارکنان تخصصی ما آشنا شوید",
-     "Search teachers or subjects":"جستوجوی تیم ما"
+     "Search teachers or subjects":"جستوجوی تیم ما",
+     "BeingProcessed":"در حال پردازش..."
 
 }
