--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -194,7 +194,8 @@
     "about.page.breadcrumb.teacher":"Our Team",
     "teacher.page.title":"Our Team",
     "teacher.page.subtitle":"Meet our dedicated educators and staff members",
-    "Search teachers or subjects":"Search Our Team"
+    "Search teachers or subjects":"Search Our Team",
+    "BeingProcessed":"Being Processed..."
 
 
 }
