--- a/src/locales/pa.json
+++ b/src/locales/pa.json
@@ -194,7 +194,8 @@
   "about.page.breadcrumb.teacher": "ښوونکي او کارکوونکي",
   "teacher.page.title": "ښوونکي او کارکوونکي",
   "teacher.page.subtitle": "زموږ له وقف شوو ښوونکو او کارکوونکو سره وپېژنئ",
-   "Search teachers or subjects":""
+   "Search teachers or subjects":"د ښوونکو او موضوعاتو لپاره جستوجو",
+   "BeingProcessed":"په پروسه کې دی..."
 }
 
 
