--- a/src/locales/da.json
+++ b/src/locales/da.json
@@ -201,6 +201,41 @@
       "about.awards.stats.totalAwards": "مجموع جوایز",
       "about.awards.stats.years": "سال‌های برتری",
       "about.awards.stats.national": "جوایز ملی",
-      "about.awards.stats.international": "جوایز بین‌المللی"
+      "about.awards.stats.international": "جوایز بین‌المللی",
+
+       
+    "studentProjects.title": "پروژه های دانش آموزان",
+    "studentProjects.subtitle": "نمایش خلاقیت، نوآوری و برتری علمی از دانش آموزان با استعداد ما",
+   "studentProjects.recent": " پروژه های اخیر",
+    "studentProjects.allProjects": "همه پروژه ها",
+    "studentProjects.filters.search": "جستجوی پروژه ها...",
+    "studentProjects.filters.category": "دسته بندی",
+    "studentProjects.filters.year": "سال",
+    "studentProjects.filters.grade": "صنف",
+    "studentProjects.filters.sortBy": "مرتب سازی",
+    "studentProjects.filters.newest": "جدیدترین",
+    "studentProjects.filters.oldest": "قدیمی ترین",
+    "studentProjects.filters.all": "همه",
+    "studentProjects.filters.reset": "پاک کردن فیلترها",
+    "studentProjects.card.viewDetails": "مشاهده جزئیات",
+    "studentProjects.card.collaborators": "همکاران",
+    "studentProjects.card.collaborator": "همکار",
+    "studentProjects.card.by": "توسط",
+    "studentProjects.noResults": "پروژه ای یافت نشد",
+    "studentProjects.noResultsDesc": "لطفاً فیلترها یا کلمات جستجو را تغییر دهید",
+    "studentProjects.detail.overview": "نمای کلی پروژه",
+    "studentProjects.detail.students": "تیم پروژه",
+    "studentProjects.detail.category": "دسته بندی",
+    "studentProjects.detail.grade": "سطح صنف",
+    "studentProjects.detail.date": "تاریخ تکمیل",
+    "studentProjects.detail.awards": "جوایز و افتخارات",
+    "studentProjects.detail.gallery": "گالری پروژه",
+    "studentProjects.detail.backToProjects": "بازگشت به پروژه ها",
+    "studentProjects.categories.science": "علوم و تکنالوژی",
+    "studentProjects.categories.arts": "هنر و ادبیات",
+    "studentProjects.categories.mathematics": "ریاضیات",
+    "studentProjects.categories.engineering": "انجینری",
+    "studentProjects.categories.social": "علوم اجتماعی",
+    "studentProjects.categories.environment": "علوم محیط زیست"
 
 }
