--- a/src/locales/pa.json
+++ b/src/locales/pa.json
@@ -200,7 +200,41 @@
   "about.awards.stats.totalAwards": "ټولې جایزې",
   "about.awards.stats.years": "د غوره والي کلونه",
   "about.awards.stats.national": "ملي جایزې",
-  "about.awards.stats.international": "نړیوالې جایزې"
+  "about.awards.stats.international": "نړیوالې جایزې",
+
+  "studentProjects.title": "د زده کوونکو پروژې",
+    "studentProjects.subtitle": "زموږ د استعدادو لرونکو زده کوونکو څخه د خلاقیت، نوښت او علمي برتری نندارول",
+    "studentProjects.recent": "وروستي پروژې",
+    "studentProjects.allProjects": "ټولې پروژې",
+    "studentProjects.filters.search": "پروژې لټول...",
+    "studentProjects.filters.category": "کټګوري",
+    "studentProjects.filters.year": "کال",
+    "studentProjects.filters.grade": "ټولګی",
+    "studentProjects.filters.sortBy": "ترتیبول",
+    "studentProjects.filters.newest": "تر ټولو نوی",
+    "studentProjects.filters.oldest": "تر ټولو زوړ",
+    "studentProjects.filters.all": "ټول",
+    "studentProjects.filters.reset": "فلټرونه پاکول",
+    "studentProjects.card.viewDetails": "تفصیلات وګورئ",
+    "studentProjects.card.collaborators": "همکاران",
+    "studentProjects.card.collaborator": "همکار",
+    "studentProjects.card.by": "لخوا",
+    "studentProjects.noResults": "هیڅ پروژه و نه موندل شوه",
+    "studentProjects.noResultsDesc": "مهرباني وکړئ خپل فلټرونه یا لټون شرایط بدل کړئ",
+    "studentProjects.detail.overview": "د پروژې عمومي کتنه",
+    "studentProjects.detail.students": "د پروژې ټیم",
+    "studentProjects.detail.category": "کټګوري",
+    "studentProjects.detail.grade": "د ټولګي کچه",
+    "studentProjects.detail.date": "د بشپړیدو نیټه",
+    "studentProjects.detail.awards": "جایزې او ویاړونه",
+    "studentProjects.detail.gallery": "د پروژې ګالري",
+    "studentProjects.detail.backToProjects": "پروژو ته بیرته",
+    "studentProjects.categories.science": "ساینس او ټکنالوژي",
+    "studentProjects.categories.arts": "هنر او ادبیات",
+    "studentProjects.categories.mathematics": "ریاضي",
+    "studentProjects.categories.engineering": "انجینري",
+    "studentProjects.categories.social": "ټولنیز علوم",
+    "studentProjects.categories.environment": "د چاپیریال علوم"
 }
 
 
